<resources>

<<<<<<< HEAD
    <string name="app_name">TrabajaYa</string>
    <string name="texto_buscar_trabajo">BUSCAR TRABAJO</string>
    <string name="texto_buscar">BUSCAR</string>
    <string name="texto_filtro">FILTRAR</string>
=======
    <string name="app_name">TrabajaYa!</string>
    <string name="text_view_find_job">BUSCAR TRABAJO</string>
    <string name="text_view_find">BUSCAR</string>
    <string name="text_view_filter">FILTRAR</string>
>>>>>>> 46ccd75 (Se trabajo en Login y register)

    <string name="texto_seBusca">Se busca:</string>
    <string name="texto_nombre_publicacion">DESARROLLADOR WEB</string>
    <string name="texto_compañia">Compañia</string>
    <string name="texto_ordenar">Ordenar Por:</string>
    <string name="texto_nombre_compañia">Live Love</string>
    <string name="texto_ubicacion">Ubicación</string>
    <string name="texto_nombre_ubicacion">Germany, Berlin</string>
    <string name="texto_contenido_imagen">Content</string>

    <string name="texto_descripcion_trabajo_titulo">SENIOR DESARROLLO DE SOFTWARE</string>
    <string name="texto_descripcion_trabajo_lugarDeTrabajo">JalaSoft</string>
    <string name="texto_descripcion_trabajo_direccion">Quillacollo, Cochabamba</string>
    <string name="texto_descripcion_trabajo_tiempo">Hace 3 dias</string>
    <string name="texto_descripcion_trabajo_resumen">Resumen de trabajo</string>
    <string name="texto_descripcion_trabajo_descripcion">DESCRIPCION</string>
    <string name="texto_descripcion_trabajo_detalle">Los ingenieros de Jalasoft crean productos y servicios que tienen un impacto en la vida diaria de nuestros clientes y equipos internos. Sus contribuciones garantizarán que se entregue continuamente valor tangible a los usuarios finales. Se espera que un candidato exitoso trabaje en estrecha colaboración con el equipo de diseño y producto para garantizar la entrega oportuna de excelentes productos. También tendrá que estar dispuesto a aprender y apasionado por hacer contribuciones al éxito del equipo.</string>
    <string name="texto_descripcion_trabajo_conocimientos">CONOCIMIENTOS</string>
    <string name="texto_descripcion_trabajo_conocimientoDetalle">• Experiencia con Scrum/metodologia de desarrollo Agile
• Buen conocimiento de los protocolos de servicios web como REST, SOAP y diseño de API para extensibilidad y portabilidad
• Capacidad para utilizar software de control de versiones como Git
• Conociemiento practico de programacion orientada a objetos.
• Conocimiento de los marcos de desarrollo de frontend. React, Angular, VueJS
• Comprensión de conceptos en estructuras de datos y algoritmos con capacidad demostrada para hacer uso de ellos.</string>
    <string name="texto_descripcion_trabajo_nivelEducacion">Nivel de educacion</string>
    <string name="texto_descripcion_trabajo_nivel">Licenciatura</string>
    <string name="texto_descripcion_trabajo_experienciaLaboral">Experiencia laboral relevante requerida</string>
    <string name="texto_descripcion_trabajo_experiencia">3 años</string>
    <string name="texto_descripcion_trabajo_idiomasRequeridos">Idiomas requeridos</string>
    <string name="texto_descripcion_trabajo_idiomas">Ingles</string>




    <string name="etiqueta_nombre_perfil">Bob El Constructor</string>
    <string name="etiqueta_informacion_cuenta">DETALLES DE LA CUENTA</string>
    <string name="etiqueta_correo_electronico">Correo Electronico</string>
    <string name="etiqueta_email">bob_constructor@gmail.com</string>
    <string name="etiqueta_telefono">Numero De Celular</string>
    <string name="etiqueta_numero_telefono">+591 77968874</string>
    <string name="etiqueta_publicacion">MIS PUBLICACIONES</string>
    <string name="descripcion_imagen">Image</string>

    <string name="button_text">Atras</string>
    <string name="publish_job">PUBLICAR TRABAJO</string>
    <string name="detalles">DETALLES</string>
    <string name="empresa">Empresa:</string>
    <string name="empresa_text">empresa</string>
    <string name="titulo">Título:</string>
    <string name="titulo_text">título</string>
    <string name="descripcion">Descripción:</string>
    <string name="descripcion_text">descripción</string>
    <string name="area">Area:</string>
    <string name="area_text">area</string>
    <string name="departamento">Departamento:</string>
    <string name="departamento_text">departamento</string>
    <string name="jornada">Jornada:</string>
    <string name="jornada_text">jornada</string>
    <string name="requisitos">Requisitos:</string>
    <string name="requisitos_text">requisitos</string>
    <string name="contacto">CONTACTO</string>
    <string name="correo">Correo:</string>
    <string name="correo_text">correo</string>
    <string name="telefono">Telefono:</string>
    <string name="telefono_text">telefono</string>
    <string name="boton_publicar_texto">Publicar</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="Nombre">NOMBRE</string>
    <string name="Apellido">APELLIDO</string>
    <string name="Correo_electronico">CORREO ELECTRONICO</string>
    <string name="Contraseña">CONTRASEÑA</string>
    <string name="Registrarse">Registrarse</string>
    <string name="RegistrarseMayuscula">REGISTRARSE</string>
    <string name="CrearCuenta">CREAR NUEVA CUENTA</string>
    <string name="Ingresar">Ingresar</string>
    <string name="IniciarSesion">Iniciar Sesion</string>
    <string name="IngresaDatos">INGRESE SUS DATOS</string>

    <string name="botonContraseña">Enviar contraseña</string>
    <string name="OlvidarContraseña">Recupera tu contraseña</string>
    <string name="tienesCuenta">¿Ya tienes cuenta? Ingresa aquí</string>
    <string name="noCuenta">¿No tienes cuenta? Ingresa aquí</string>
    <string name="noContrasena">¿Olvidaste tú contraseña?</string>

    <string name="boton_trabajos_menu">Trabajos</string>
    <string name="boton_cuenta_menu">Mi cuenta</string>
    <string name="boton_publicar_trabajo_menu">Publicar</string>

</resources>