<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistroUsuario">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:indeterminate="true"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="@android:dimen/app_icon_size"
        android:text="@string/RegistrarseMayuscula" />

    <TextView
        android:id="@+id/crearCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:text="@string/CrearCuenta" />

    <EditText
        android:id="@+id/txtName"
        android:autofillHints="name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:hint="@string/Nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtLastName"
        android:autofillHints="name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/Apellido"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtEmail"
        android:autofillHints="emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Correo_electronico"
        android:layout_margin="10dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtPassword"
        android:autofillHints="password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Contraseña"
        android:layout_margin="10dp"
        android:inputType="textPassword" />

    <Button
        android:onClick="register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Registrarse"
        android:layout_margin="20dp"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/white" />

    <TextView
        android:onClick="login"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tienesCuenta" />

</LinearLayout>